# agentops-desk

./: .env.example  .gitignore  MCP_IMPLEMENTATION_SUMMARY.md  OPERATIONS.md  README.md  finalproject-说明.md  package-lock.json  pyproject.toml
docs/: FINAL_PROJECT_REPORT.md  MCP_EVALUATION.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_README.md  OPERATIONS.md  PROJECT_RUN_GUIDE.md  PROJECT_STRUCTURE.md  finalproject-说明.md  tech_point_3_evaluation.md
src/agents_demo/: __init__.py  __init__.py.bak  api.py  evaluators.py  fastapi_qwen_gradio.py  generate_evaluation_data.py  main.py  main_qwen.py  mcp_demo.py  mcp_evaluation.py  mcp_food_server.py  mcp_integration.py  mcp_server.py  seat_assignments.py  serve.py  storage.py  telemetry.py  test_mcp_unit.py
src/agents_demo/agents/: fastapi_qwen_gradio.py  main.py  main_qwen.py  serve.py
src/agents_demo/api/: api.py
src/agents_demo/data/: conversations.json  customer_profiles.json  feedback.jsonl  flights.json  mcp_evaluation_data.json  meals.json  seats.json  traces.jsonl
src/agents_demo/mcp/: mcp_demo.py  mcp_evaluation.py  mcp_integration.py  mcp_server.py
src/agents_demo/mcp_eval_food/: __init__.py  dataset.py  task.py
src/agents_demo/services/: data_loader.py  evaluators.py  storage.py  telemetry.py
src/agents_demo/tests/: test_mcp.py  test_mcp_unit.py  test_mcp_verification.py
src/agents_demo/ui/: next.config.mjs  package.json
src/agents_demo/ui/app/: layout.tsx  page.tsx
src/agents_demo/ui/components/: Chat.tsx  agent-panel.tsx  agents-list.tsx  conversation-context.tsx  guardrails.tsx  panel-section.tsx  runner-output.tsx  seat-map.tsx
src/agents_demo/ui/lib/: api.ts  types.ts
src/agents_demo/utils/: generate_evaluation_data.py
